--- a/index.html
+++ b/index.html
@@ -1,320 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Validação de Visita – Nichele Tintas</title>
-
-<!-- PWA -->
-<link rel="manifest" href="manifest.json">
-<link rel="icon" href="iconeapp.png">
-<meta name="theme-color" content="#6a1b9a">
-
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  height: 100%;
-  overflow-x: hidden;
-}
-
-#intro {
-  position: fixed;
-  inset: 0;
-  background: url('capa.png') no-repeat center top;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 2.2s ease, filter 2.2s ease;
-  z-index: 10;
-}
-
-#intro.fade-out {
-  opacity: 0;
-  filter: blur(18px);
-  pointer-events: none;
-}
-
-#intro button {
-  font-size: 16px;
-  padding: 12px 26px;
-  max-width: 220px;
-  background: #6a1b9a;
-  color: #fff;
-  border: none;
-  border-radius: 14px;
-  cursor: pointer;
-}
-
-#formulario {
-  position: relative;
-  opacity: 0;
-  pointer-events: none;
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding-top: 90px;
-  padding-bottom: 90px;
-  transition: opacity 2.2s ease;
-}
-
-#fundo-topo, #fundo-baixo {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  z-index: 0;
-}
-
-#fundo-topo {
-  top: 0;
-  height: 50%;
-  background: url('topo.png') no-repeat top center;
-  background-size: cover;
-}
-
-#fundo-baixo {
-  top: 50%;
-  height: 50%;
-  background: url('baixo.png') no-repeat top center;
-  background-size: cover;
-}
-
-#formulario.ativo {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.card {
-  background: #fff;
-  width: 78%;
-  max-width: 300px;
-  padding: 38px 26px 40px;
-  border-radius: 22px;
-  box-shadow: 0 18px 45px rgba(0,0,0,0.28);
-  transform: translateY(140px);
-  opacity: 0;
-  transition: transform 1.8s ease, opacity 1.8s ease;
-  z-index: 1;
-}
-
-.card h2 {
-  text-align: center;
-  color: #6a1b9a;
-  margin-bottom: 18px;
-}
-
-label {
-  font-weight: bold;
-  display: block;
-  margin-top: 14px;
-}
-
-input, select, textarea, button {
-  width: 100%;
-  padding: 12px;
-  margin-top: 6px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  font-size: 15px;
-  box-sizing: border-box;
-}
-
-textarea { resize: vertical; }
-
-button {
-  background: #6a1b9a;
-  color: #fff;
-  border: none;
-  margin-top: 16px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-button.confirmado {
-  background: #2f7d32;
-}
-
-.progress {
-  height: 4px;
-  background: #e0e0e0;
-  border-radius: 4px;
-  overflow: hidden;
-  margin-bottom: 18px;
-}
-
-.progress span {
-  display: block;
-  height: 100%;
-  width: 0%;
-  background: #2e7d32;
-  transition: width 0.4s ease;
-}
-
-#localizacao {
-  font-size: 13px;
-  margin-top: 6px;
-}
-
-#statusEnvio {
-  text-align: center;
-  font-size: 13px;
-  margin-top: 10px;
-}
-</style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <body>
+  <h2>Controle de Jornada</h2>
 
-<div id="intro">
-  <button onclick="mostrarFormulario()">Acessar Questionário</button>
-</div>
+  <input id="nome" placeholder="Nome"><br><br>
+  <input id="codigo" placeholder="Código do vendedor"><br><br>
 
-<div id="formulario">
-  <div id="fundo-topo"></div>
-  <div id="fundo-baixo"></div>
+  <button onclick="entrar()">Acessar questionário</button>
 
-  <div class="card" id="card">
-    <h2>Visitas Externas</h2>
+  <script>
+    function entrar() {
+      const nome = document.getElementById("nome").value;
+      const codigo = document.getElementById("codigo").value;
 
-    <div class="progress">
-      <span id="progressBar"></span>
-    </div>
+      if (!nome || !codigo) {
+        alert("Preencha nome e código");
+        return;
+      }
 
-    <label>Vendedor</label>
-    <input id="vendedor">
+      sessionStorage.setItem("nome", nome);
+      sessionStorage.setItem("codigo", codigo);
 
-    <label>Código do Vendedor</label>
-    <input id="codigoVendedor" inputmode="numeric" pattern="[0-9]*">
-
-    <label>Nome do Cliente</label>
-    <input id="nomeCliente">
-
-    <label>Contato do Cliente</label>
-    <input id="contatoCliente" inputmode="numeric" placeholder="(__) _____-____">
-
-    <label>Loja</label>
-    <select id="loja">
-      <option value="">Selecione</option>
-      <option>Água Verde</option>
-      <option>Portão</option>
-      <option>Sprada</option>
-    </select>
-
-    <label>Tipo de Cliente</label>
-    <select id="tipoCliente">
-      <option value="">Selecione</option>
-      <option>Obra ativa</option>
-      <option>Pintor profissional</option>
-      <option>Cliente corporativo</option>
-      <option>Cliente loja</option>
-    </select>
-
-    <label>Status da Visita</label>
-    <select id="statusVisita">
-      <option value="">Selecione</option>
-      <option>Prospecção</option>
-      <option>Orçamento</option>
-      <option>Negociação</option>
-      <option>Fechado</option>
-      <option>Sem interesse</option>
-    </select>
-
-    <label>Observações</label>
-    <textarea id="observacoes" rows="3"></textarea>
-
-    <button id="btnLoc" onclick="capturarLocalizacao()">📍 Capturar localização</button>
-    <p id="localizacao"></p>
-
-    <button id="btnFoto" onclick="abrirCamera()">📸 Capturar foto</button>
-    <input type="file" id="camera" hidden accept="image/*" capture="environment">
-
-    <button id="btnEnviar" onclick="enviar()">Confirmar visita ✓</button>
-    <div id="statusEnvio"></div>
-  </div>
-</div>
-
-<script>
-let latitude, longitude, enderecoFormatado = "", fotoBase64 = null;
-
-const API_URL = "https://script.google.com/macros/s/AKfycbz6qmg-D8bFrxNEJPqID53ySl9NivMDyBww2vC8ipx_EkdnA8zRR-itGc2vapz6w_N2aw/exec";
-
-const campos = ["vendedor","codigoVendedor","nomeCliente","contatoCliente","loja","tipoCliente","statusVisita","observacoes"];
-campos.forEach(id => document.getElementById(id).addEventListener("input", atualizarProgresso));
-
-function atualizarProgresso() {
-  const preenchidos = campos.filter(id => document.getElementById(id).value).length;
-  progressBar.style.width = (preenchidos / campos.length) * 100 + "%";
-}
-
-function mostrarFormulario() {
-  intro.classList.add("fade-out");
-  formulario.classList.add("ativo");
-  setTimeout(() => {
-    card.style.transform = "translateY(0)";
-    card.style.opacity = "1";
-  }, 120);
-}
-
-function capturarLocalizacao() {
-  navigator.geolocation.getCurrentPosition(async pos => {
-    latitude = pos.coords.latitude;
-    longitude = pos.coords.longitude;
-
-    const r = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`);
-    const d = await r.json();
-
-    const a = d.address || {};
-    enderecoFormatado = `${a.road || ""}, ${a.house_number || ""} - ${a.suburb || ""}, ${a.city || a.town || ""} - ${a.state_code || ""}, ${a.postcode || ""}`;
-
-    btnLoc.classList.add("confirmado");
-    btnLoc.textContent = "Capturar localização ✓";
-    localizacao.innerText = enderecoFormatado;
-  });
-}
-
-camera.addEventListener("change", e => {
-  const r = new FileReader();
-  r.onload = () => {
-    fotoBase64 = r.result;
-    btnFoto.classList.add("confirmado");
-    btnFoto.textContent = "Capturar foto ✓";
-  };
-  r.readAsDataURL(e.target.files[0]);
-});
-
-function enviar() {
-  statusEnvio.innerText = "Enviando relatório...";
-  fetch(API_URL, {
-    method: "POST",
-    body: JSON.stringify({
-      vendedor: vendedor.value,
-      codigoVendedor: codigoVendedor.value,
-      nomeCliente: nomeCliente.value,
-      contatoCliente: contatoCliente.value,
-      loja: loja.value,
-      tipoCliente: tipoCliente.value,
-      statusVisita: statusVisita.value,
-      observacoes: observacoes.value,
-      lat: latitude,
-      lng: longitude,
-      endereco: enderecoFormatado,
-      fotoBase64: fotoBase64
-    })
-  }).then(() => {
-    btnEnviar.classList.add("confirmado");
-    btnEnviar.textContent = "Confirmar visita ✓";
-    statusEnvio.innerText = "";
-  });
-}
-
-function abrirCamera() {
-  camera.click();
-}
-</script>
-
+      window.location.href = "menu.html";
+    }
+  </script>
 </body>
 </html>
